--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>PHP Course - IKNSA</title>
+    <title>Formation Course - IKNSA</title>
     <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
   </head>
   <body>
@@ -17,35 +18,26 @@
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
+
+        <div class="breadcrumb">
+            <span>You are here</span>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="page.html">About Us</a></li>
+            </ul>
+        </div>
     </header>
-<body>
 
-</body>
-    <main>
-        <h1>My big website</h1>
-        <section>
-            my big freaking slider
-        </section>
+     <div class="jumbotron">
 
-        <section>
         <?php
-           echo 'Bonjour';
+        echo "teststs";
+       
         ?>
-            <article>
-                <h2>Picture</h2>
-                <img src="img/webserver.gif" alt="un dessin">
-                <p>Un big de dessin</p>
-            </article>
-            <article>
-                <h2>Le couple</h2>
-                <img src="img/img2.png" alt="un dessin">
-                <p>Le couple parfait!</p>
-            </article>
-           
-        </section>
-    </main>
+     </div>
 
-    <footer>
+
+ <footer>
         copyright @iknsa.com
     </footer>
   </body>
